--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
   webpack-analyzer:
     runs-on: ubuntu-22.04
     steps:
-      - name: Deploy React to GitHub Pages
+      - name: yarn
         # You may pin to the exact commit or the version.
         # uses: bitovi/github-actions-react-to-github-pages@4cf343888989e21112bce7e59156242a0e1defb3
-        uses: bitovi/github-actions-react-to-github-pages@v1.2.4
+        uses: comchangs/action-yarn@v0.1-beta
